--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,8 @@ docker:
   services:
     - docker:dind
   script:
-    - docker build -t brennerm/cdk8s -f Dockerfile.typescript .
-    - docker build -t brennerm/cdk8s-python -f Dockerfile.python .
+    - docker build -t $DOCKER_HUB_USER/cdk8s -f Dockerfile.typescript .
+    - docker build -t $DOCKER_HUB_USER/cdk8s:python -f Dockerfile.python .
+    - docker login -u $DOCKER_HUB_USER -p $DOCKER_HUB_PASSWORD
+    - docker push $DOCKER_HUB_USER/cdk8s
+    - docker push $DOCKER_HUB_USER/cdk8s:python
